Working on Swagger documentation & missions api endpoint
