# app/Http/Controllers/UserController.php
@@ -1,8 +1,11 @@
 <?php namespace App\Http\Controllers;
 
 
+use App\Models\ApiResponse;
 use App\Models\User;
 use App\Services\UserService;
+use Illuminate\Http\Request;
+
 
 class UserController extends Controller {
 
@@ -14,7 +17,7 @@ class UserController extends Controller {
      * and the middlewares
      */
     public function __construct() {
-        $this->middleware('jwt.auth', ['except' => ['register']]);
+        //$this->middleware('jwt.auth', ['only' => ['register']]);
         $this->userService = new UserService();
     }
 
@@ -39,24 +42,23 @@ class UserController extends Controller {
      * @return \Illuminate\Http\JsonResponse
      *
      * @SWG\Get(
+     *     summary="Get all users",
      *     path="/users",
      *     description="Retrieve the users of the application.",
      *     operationId="api.users",
      *     produces={"application/json"},
      *     tags={"users"},
-     *     @SWG\Parameter(
-     *			name="jwtToken",
-     *			description="The JWT is required in order to authenticate the user",
-     *      	required=true,
-     *      	type="string"
-     *     ),
      *     @SWG\Response(
      *         response=200,
-     *         description="Returns all the users of the application."
+     *         description="Returns all the users of the application",
+     *          @SWG\Schema(
+     *             type="array",
+     *             @SWG\Items(ref="#/definitions/user")
+     *         ),
      *     ),
      *     @SWG\Response(
      *         response=400,
-     *         description="Unauthorized action.",
+     *         description="Unauthorized action",
      *     )
      * )
      */
@@ -64,11 +66,86 @@ class UserController extends Controller {
 
         $users = User::all();
 
-        return \Response::json([
-            'success' => true,
-            'data' => [
-                'users' => $users]
-        ]);
+        $response = new ApiResponse();
+        $response->success = false;
+        $response->data = [
+            'users' => $users];
+
+        return \Response::json($response);
+    }
+
+    /**
+     * Authenticate a user based on given credentials.
+     *
+     * @return \Illuminate\Http\JsonResponse
+     *
+     * @SWG\Post(
+     *     summary="Authenticate a user",
+     *     path="/users/authenticate",
+     *     description="Authenticate a user based on given credentials.",
+     *     operationId="api.users.authenticate",
+     *     produces={"application/json"},
+     *     tags={"users"},
+     *     @SWG\Parameter(
+     *			name="email",
+     *			description="The user's email",
+     *      	required=true,
+     *      	type="string",
+     *          in="query"
+     *     ),
+     *     @SWG\Parameter(
+     *			name="password",
+     *			description="The user's password",
+     *      	required=true,
+     *      	type="string",
+     *          in="query"
+     *     ),
+     *     @SWG\Response(
+     *         response=200,
+     *         description="User authenticated",
+     *         @SWG\Schema(ref="#/definitions/apiResponse")
+     *     ),
+     *     @SWG\Response(
+     *         response=404,
+     *         description="User not found",
+     *     ),
+     *     @SWG\Response(
+     *         response=400,
+     *         description="Unauthorized action",
+     *     )
+     * )
+     */
+    public function authenticate(Request $request) {
+        $credentials = $request->only('email', 'password');
+
+        try {
+            // verify the credentials and create a token for the user
+            if (!$token = \JWTAuth::attempt($credentials)) {
+                $response = new ApiResponse();
+                $response->success = false;
+                $response->errors = [
+                    'id' => '',
+                    'message' => 'invalid_credentials'];
+
+                return \Response::json($response);
+            }
+        } catch (JWTException $e) {
+            // something went wrong
+            $response = new ApiResponse();
+            $response->success = false;
+            $response->errors = [
+                'id' => '',
+                'message' => 'could_not_create_token'];
+
+            return \Response::json($response);
+        }
+
+        // if no errors are encountered we can return a JWT
+        $response = new ApiResponse();
+        $response->success = true;
+        $response->data = ['token'=> $token];
+
+        return \Response::json($response);
     }
 
 }
